--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-test-tiny.git"
+  },
+  "dependencies": {
+    "cypress": "^10.3.0",
+    "is-even": "^1.0.0"
   }
 }
